# picoreseau

./: .gitignore  CMakeLists.txt  README.md  hardware_notes.md  picoreseau.uf2
python/: nr_server.py
python/picoreseau/: consigne.py  device.py  file.py  files.py  usb.py
src/: clock_detect.cpp  clock_detect.h  hdlc.pio  hdlc_rx.cpp  hdlc_rx.h  hdlc_rx.pio  hdlc_tx.cpp  hdlc_tx.h  hdlc_tx.pio  picoreseau.cpp  picoreseau.hxx  picoreseau.pio
src/usb/: cdc_uart.c  cdc_uart.h  get_serial.h  get_unique_serial.c  get_unique_serial.h  tusb_config.h  usb_descriptors.c  usb_tasks.c  usb_tasks.cpp  usb_tasks.h  usb_tasks.hxx
test/: usb_cmd_test.py  usb_test.py
